--- a/Aula1/QuarentenaDados_aula01.ipynb
+++ b/Aula1/QuarentenaDados_aula01.ipynb
@@ -5,8 +5,7 @@
     "colab": {
       "name": "QuarentenaDados - aula01",
       "provenance": [],
-      "collapsed_sections": [],
-      "include_colab_link": true
+      "collapsed_sections": []
     },
     "kernelspec": {
       "name": "python3",
@@ -14,16 +13,6 @@
     }
   },
   "cells": [
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/mmanfrin/QuarentenaDados/blob/master/QuarentenaDados_aula01.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
     {
       "cell_type": "markdown",
       "metadata": {
@@ -53,9 +42,35 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "bucp5Y0STErl",
+        "colab_type": "code",
+        "outputId": "c2606c03-ec61-4bcc-e495-07ec7d686479",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        }
+      },
+      "source": [
+        "from google.colab import drive\n",
+        "drive.mount('/content/drive')"
+      ],
+      "execution_count": 0,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "vC0a5z7IRFWT",
         "colab_type": "code",
-        "outputId": "850f9150-c2df-4f2c-b6bc-602083ab7587",
+        "outputId": "718aabff-7128-409c-c664-0c491b27c259",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 50
